# egt-thermostat

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile.am  README.md  _config.h.in  configure.ac  egt-thermostat.xml  thermostat.sql
images/: menu.xcf
src/: logic.cpp  logic.h  pages.cpp  pages.h  sensors.cpp  sensors.h  settings.cpp  settings.h  thermostat.cpp  window.cpp  window.h
